@@ -4,6 +4,9 @@
       they were only used by one example script.  If you need them for
       your project, you can download them from http://dejavu-fonts.org
 
+    - The undocumented save_xml method has been removed, along with
+      the supporting functions in PDF::API2::Basic::*.
+
     - [RT #58386] Fix create_egs call in Lite.pm (J Greely)
 
     - [RT #62922] Fix string interpolation in pdf-merge.pl
